# gtklock-playerctl-module

./: .gitignore  README.md  gtklock-module.h  makefile  meson.build  source.c
